tests/error/type_mismatch/def/arg.bas
10 DEF FN NUMF(X%) = X% * X%
20 DEF FN STRF(S$) = S$
30 LET A = FN NUMF("STRING")
40 LET A = FN STRF(21)